added mobile test coverage

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ it('should update items image and delete old image', function (done) {
                         <dl>
                             <dd>Front End</dd><dt>27%</dt>
                             <dd>Back End</dd><dt>1.8%</dt>
+                           	<dd>Mobile App</dd><dt>95.98%</dt>
                         </dl>
                         <p>Target for most mature projects is at least 80%</p>
 					</section>
