added coverage and test pyramid images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<section>
 					<h2>The Automated Testing Pyramid</h2>
-					<img src="http://placegoat.com/600">
+					<img src="img/test_pyramid_before.png">
 				</section>
 
 				<section>
@@ -234,11 +234,10 @@ it('should update items image and delete old image', function (done) {
 					<section>
 						<h2>Code Coverage</h2>
                         <p>Right now, our code coverage is pretty abysmal.</p>
-                        <dl>
-                            <dd>Front End</dd><dt>27%</dt>
-                            <dd>Back End</dd><dt>1.8%</dt>
-                           	<dd>Mobile App</dd><dt>95.98%</dt>
-                        </dl>
+                    	<img src="img/coverage.jpg">
+
+                        <p><small>(All coverage data collected 8/13/14)</small></p>
+                        
                         <p>Target for most mature projects is at least 80%</p>
 					</section>
 					
