made pyramids transparent

--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
 
 				<section>
 					<h2>The Automated Testing Pyramid</h2>
-					<img src="img/test_pyramid_before.png">
+					<img src="img/test_pyramid_before.png" height="600px">
 				</section>
+
+				<section>
+					<h2>The Automated Testing Pyramid</h2>
+					<img src="img/test_pyramid_after.png" height="600px">
+				</section>
+
+
 
 				<section>
 					<section>
