updated coverage wording

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ define('Some awesome integration test', function () {
 
                         <p><small>(All coverage data collected 8/13/14)</small></p>
 
-                        <p>Target for most mature projects is at least 80%</p>
+                        <p>Target for most mature projects is 70% - 80%</p>
                     </section>
 
                     <section>
